did some changes some time back

--- a/thandotec/index.html
+++ b/thandotec/index.html
@@ -13,9 +13,16 @@
         <!-- favicon -->
         <link rel="shortcut icon" href="img/favicon.ico">
 
+        <!-- styles css -->
+        <link rel="stylesheet" href="css/style.css">
+
     </head>
 
     <body>
+        
         <h1>Welcome To ThandoTec</h1>
+
+        <!-- custom js -->
+        <script src="js/custom.js"></script>
     </body>
 </html>
